# osp

./: .gitignore  CLAUDE.md  CONTRIBUTING-RFC.md  CONTRIBUTING.md  LICENSE  NEXT_SESSION_PROMPT.md  README.md
.github/workflows/: ci.yml  deploy.yml
conformance-tests/: README.md
conformance-tests/fixtures/canonical-json/: parity-test.ts  parity_test.go  parity_test.py  vectors.json
conformance-tests/fixtures/manifest-verification/: invalid-manifest-behavior.md  manifests.json
conformance-tests/python/: conftest.py  test_agent_conformance.py  test_cost_summary_conformance.py  test_crypto_vectors.py  test_idempotency_conformance.py  test_identity_conformance.py  test_provider_conformance.py  test_sandbox_conformance.py
conformance-tests/python/badges/: README.md  __init__.py  badge_template.py  generate_badges.py
docs/: agent-checklist.md  demo-script.md  error-reference.md  for-agents.md  for-providers.md  getting-started.md  provider-checklist.md  provider-integration-guide.md  security-audit-checklist.md  security-model.md  security-verification-guarantees.md  stripe-comparison.md  vault-migration.md
docs/better/: README.md  discover.md  env-generation.md  provision.md  services.md  vault.md
docs/better-workflow/: auth.md  github-actions.md  paid-provisioning.md
docs/blog/: why-we-built-osp.md
docs/demos/: demo-scripts.md
docs/enterprise/: governance.md
docs/gtm/: golden-paths.md  narrative.md  provider-onboarding.md
docs/ietf/: draft-durmaz-osp-00.md
docs/launch/: pitch-deck-outline.md  provider-outreach-email.md  show-hn.md  twitter-thread.md
docs/ops/: adoption-dashboards.md
docs/partners/: design-partner-program.md
docs/payments/: canonical-flows.md  sardis-provider-verification.md
docs/plans/: 2026-03-28-osp-commit-plan.md  2026-03-28-osp-master-plan-v2.md  2026-03-28-osp-master-plan.md  2026-03-29-master-plan.md  2026-03-29-protocol-improvement-state.md
docs/profiles/: paid-core.md
docs/registry/: trust-metadata-model.md
examples/mcp-flows/: paid-provisioning.md
examples/nextjs-supabase-clerk/: README.md  osp.yaml
examples/python-neon-resend/: osp.yaml
osp-core/: Cargo.toml
osp-core/crates/osp-cli/: Cargo.toml
osp-core/crates/osp-cli/src/: cli.rs  main.rs
osp-core/crates/osp-cli/src/commands/: conformance_cmd.rs  discover.rs  env_cmd.rs  init.rs  mod.rs  provision.rs
osp-core/crates/osp-conformance/: Cargo.toml
osp-core/crates/osp-conformance/src/: agent_tests.rs  badge.rs  error.rs  levels.rs  lib.rs  provider_tests.rs  report.rs
osp-core/crates/osp-crypto/: Cargo.toml
osp-core/crates/osp-crypto/src/: canonical.rs  encoding.rs  encryption.rs  error.rs  lib.rs  signing.rs
osp-core/crates/osp-manifest/: Cargo.toml
osp-core/crates/osp-manifest/src/: cache.rs  error.rs  fetch.rs  lib.rs  types.rs  validate.rs  verify.rs
osp-core/crates/osp-provider/: Cargo.toml
osp-core/crates/osp-provider/src/: error.rs  health.rs  lib.rs  port.rs  registry.rs
osp-core/crates/osp-provider/src/adapters/: mod.rs  neon.rs  posthog.rs  railway.rs  resend.rs  rest_client.rs  supabase.rs  turso.rs  upstash.rs  vercel.rs
osp-core/crates/osp-registry/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  fly.toml
osp-core/crates/osp-registry/deploy/: README.md
osp-core/crates/osp-registry/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  payment_search.rs  routes.rs  server.rs
osp-core/crates/osp-sdk/: Cargo.toml
osp-core/crates/osp-sdk/src/: client.rs  lib.rs  provider.rs
osp-core/crates/osp-vault/: Cargo.toml
osp-core/crates/osp-vault/src/: env.rs  error.rs  lib.rs  resolver.rs  store.rs
osp-sdk-go/: canonical.go  canonical_test.go  client.go  client_test.go  crypto.go  crypto_test.go  encryption.go  encryption_test.go  errors.go  errors_test.go  field.go  go.mod  paid_provisioning.go  provider.go  provider_test.go  resolver.go  resolver_test.go  types.go  types_test.go
reference-implementation/python/: pyproject.toml
reference-implementation/python/examples/: example_provider.py
reference-implementation/python/src/osp/: __init__.py  client.py  manifest.py  paid_provisioning.py  provider.py  resolver.py  types.py
reference-implementation/python/src/osp/integrations/: __init__.py  django.py  fastapi.py
reference-implementation/python/tests/: conftest.py  test_client.py  test_integrations.py  test_manifest.py  test_provider.py  test_resolver.py  test_types.py
reference-implementation/typescript/: package-lock.json  package.json  tsconfig.json
reference-implementation/typescript/src/: client.ts  crypto.ts  index.ts  manifest.ts  mcp-server.ts  paid-provisioning.ts  resolver.ts  types.ts  vault.ts
reference-implementation/typescript/tests/: client.test.ts  mcp-server.test.ts  plugins.test.ts  resolver.test.ts
sardis-integration/: package-lock.json  package.json
sardis-integration/src/: index.ts
sardis-integration/src/cli/: bridge.ts  commands.ts  index.ts
sardis-integration/src/mcp/: bridge.ts  index.ts  sardis-mcp-server.ts
sardis-integration/src/payment/: dispute-service.ts  escrow-service.ts  escrow.ts  (+9 more)
schemas/: cost-summary.schema.json  credential-bundle.schema.json  error-response.schema.json  health-response.schema.json  provision-request.schema.json  provision-response.schema.json  service-manifest.schema.json  usage-report.schema.json  webhook-event.schema.json
schemas/examples/: clerk-manifest.json  cloudflare-manifest.json  neon-manifest.json  posthog-manifest.json  provision-request-free.json  provision-request-paid-stripe.json  provision-request-paid-x402.json  provision-request-paid.json  provision-response-async.json  provision-response-paid-escrow.json  provision-response-sync.json  railway-manifest.json  resend-manifest.json  supabase-manifest.json  turso-manifest.json  upstash-manifest.json  vercel-manifest.json
skills/: clerk.md  cloudflare.md  neon.md  posthog.md  railway.md  resend.md  supabase.md  turso.md  upstash.md  vercel.md
spec/: osp-v1.0.md
website/: package-lock.json  package.json  tailwind.config.js
website/app/: globals.css  layout.tsx  page.tsx
(+14 files in other folders)
