[workspace]
resolver = "2"
members = [
    "crates/osp-crypto",
    "crates/osp-manifest",
    "crates/osp-vault",
    "crates/osp-cli",
    "crates/osp-provider",
    "crates/osp-registry",
    "crates/osp-conformance",
    "crates/osp-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/open-service-protocol/osp-core"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
xsalsa20poly1305 = "0.9"
rand = "0.8"

# Serde / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async / HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Encoding
base64 = "0.22"
hex = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
jsonschema = "0.18"
keyring = "2"
aes-gcm = "0.10"
sha2 = "0.10"
directories = "5"
toml = "0.8"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Workspace crates
osp-crypto = { path = "crates/osp-crypto" }
osp-manifest = { path = "crates/osp-manifest" }
osp-vault = { path = "crates/osp-vault" }
osp-provider = { path = "crates/osp-provider" }
osp-registry = { path = "crates/osp-registry" }
osp-conformance = { path = "crates/osp-conformance" }
osp-cli = { path = "crates/osp-cli" }
osp-sdk = { path = "crates/osp-sdk" }
