[project]
name = "osp-client"
version = "0.2.0"
description = "OSP (Open Service Protocol) client and provider SDK for Python — discover, provision, and manage developer services"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = ["httpx>=0.27", "pydantic>=2.0"]
keywords = ["osp", "agent", "provisioning", "open-service-protocol", "mcp", "ai-agent", "developer-services"]

[project.urls]
Repository = "https://github.com/open-service-protocol/osp"

[project.optional-dependencies]
provider = ["fastapi>=0.115", "uvicorn>=0.30"]
django = ["django>=4.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
