[package]
name = "osp-cli"
description = "Command-line interface for the Open Service Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "osp"
path = "src/main.rs"

[dependencies]
osp-crypto.workspace = true
osp-manifest.workspace = true
osp-vault.workspace = true
osp-provider.workspace = true
osp-conformance.workspace = true
clap.workspace = true
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
