[package]
name = "osp-conformance"
description = "Conformance test suite for OSP providers and agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
osp-manifest.workspace = true
osp-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
tracing.workspace = true
