[package]
name = "osp-crypto"
description = "Cryptographic primitives for the Open Service Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
xsalsa20poly1305.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
hex.workspace = true
thiserror.workspace = true
sha2.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
serde_json.workspace = true
