[package]
name = "osp-provider"
description = "Provider adapter framework for OSP"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
osp-manifest.workspace = true
osp-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
tracing.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
