[package]
name = "osp-registry"
description = "OSP manifest registry server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "osp-registry"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
osp-manifest.workspace = true
osp-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest.workspace = true
