[package]
name = "osp-sdk"
description = "Rust SDK for the Open Service Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
osp-crypto.workspace = true
osp-manifest.workspace = true
osp-vault.workspace = true
osp-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
tracing.workspace = true
